Fix: Continue watching progress bar and the chapter cards were bugged on Firefox

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -1910,16 +1910,19 @@ progress + span {
 }
 
 .innerCardFooter,
+.chapterCardImageContainer {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.innerCardFooter,
 .chapterThumbTextContainer {
     background: var(--cardFooterGradient);
     text-shadow: 0.1em 0.1em 0px black;
-    width: 100%;
-    height: 100%;
-    width: -webkit-fill-available;
-    height: -webkit-fill-available;
     padding: 0em 2em 2em 2em;
     align-content: end;
     display: grid;
+    height: 100%;
 }
 
 .chapterCardImageContainer {
